--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header#navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 40px;
+  padding: 15px 8px;
   background: rgba(255, 255, 255, 0.95);
   backdrop-filter: blur(0.5px);
   z-index: 1000;
@@ -1846,48 +1846,47 @@ main {
 @media (max-width: 1150px) {
 
   
-   header#navbar {
+  header#navbar {
     flex-wrap: wrap;
-   }
+  }
  
   /* Hamburger container */
   /* Hamburger lines */
-.hamburger {
-  width: 30px;
-  height: 22px;
-  margin-right: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  cursor: pointer;
-  z-index: 1001;
-}
+  .hamburger {
+    width: 30px;
+    height: 22px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    z-index: 1001;
+  }
 
-.hamburger div {
-  height: 3px;
-  background: rgb(11, 11, 11);
-  border-radius: 5px;
-  transition: all 0.4s ease;
-}
+  .hamburger div {
+    height: 3px;
+    background: rgb(11, 11, 11);
+    border-radius: 5px;
+    transition: all 0.4s ease;
+  }
 
-/* Hamburger open → cross */
-.hamburger.open div:nth-child(1) {
-  transform: rotate(60deg) translate(9px, 5px);
-}
+  /* Hamburger open → cross */
+  .hamburger.open div:nth-child(1) {
+    transform: rotate(60deg) translate(9px, 5px);
+  }
 
-.hamburger.open div:nth-child(2) {
-  opacity: 0;
-}
+  .hamburger.open div:nth-child(2) {
+    opacity: 0;
+  }
 
-.hamburger.open div:nth-child(3) {
-  transform: rotate(-50deg) translate(5px, -6px);
-}
+  .hamburger.open div:nth-child(3) {
+    transform: rotate(-50deg) translate(5px, -6px);
+  }
 
-/* Optional hover */
-.hamburger:hover div {
-  background: #050505;
-}
-
+  /* Optional hover */
+  .hamburger:hover div {
+    background: #050505;
+  }
 
   .nav-links {
   position: absolute;
@@ -1934,7 +1933,6 @@ main {
     transform: rotate(-10deg);
     transition: all 0.4s ease;
   }
-
 
   .nav-links a {
     display: block;
@@ -2042,7 +2040,6 @@ main {
     color: #0072ff;
     text-decoration: none;
     font-weight: 400;
-    border: 1px solid #0072ff;
     border-radius: 6px;
     display: inline-block;
     transition: 0.3s;
@@ -2251,10 +2248,6 @@ main {
     margin-left: 0;
   }
   /* 🌐 Navbar */
-  header#navbar {
-    flex-wrap: wrap;
-    padding: 15px 20px;
-  }
   .hamburger {
   width: 20px;
   height: 15px;
@@ -2597,9 +2590,6 @@ main {
 
 @media (max-width: 480px) {
   /* 🌐 Navbar */
-  header#navbar {
-    padding: 15px 20px;
-  }
 
   .nav-links a {
     display: block;
@@ -2705,6 +2695,11 @@ main {
     max-width: 350px;
     margin: 0 auto;
     text-align: left;
+  }
+
+  
+  .card-container .section-block{
+    margin: 10px 0 15px 40%;
   }
 
   .timeline-item.left,
